error solved of unique id

--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                                     Community of Developer
                                 </h1>
                                 <p>
-                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsuanything embarrassing hidden in the middle of text. All the Lorem Ipsumm
+                                        "CODEx isn't just about programming; it's about empowering each other to write the future."
                                 </p>
                                 <div class="btn-box">
                                     <a href="" class="btn-1">
