--- a/CODEx/Areas/User/Views/RegistrationForm/TeamId.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/TeamId.cshtml
@@ -4,8 +4,8 @@
     <
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Registration Successfully</h1>
-        Unique Id:  <br /><br />
-        <img src="~/images/lawn_leaf.jpg" width="65%" />
+        Unique Id: @Model.TeamId  <br /><br />
+        <img src="~/images/banner/minithon.jpeg" width="25%" />
     </div>
     <div class="col-12 text-center" style="color: maroon">
         <br />
