--- a/CODEx/Areas/User/Views/RegistrationForm/Create.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Create.cshtml
@@ -1,13 +1,14 @@
 ﻿@model RegistrationForm
 
+<div class="container">
 <div class="card shadow border-0 mt-4">
-    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+    <div class="card-header ml-0 py-3">
         <div class="row text-center">
-            <h2 class="text-primary py-2">Minithon 2.0</h2>
+            <h2 class="py-2">Minithon 2024</h2>
         </div>
     </div>
     <div class="card-body p-4">
-        <form method="post" class="row">
+        <form method="post" asp-action="Create" asp-controller="RegistrationForm" class="row">
             <div class="border p-3">
                 <div class="mb-3 row">
                     <label asp-for="TeamName" class="p-1"></label>
@@ -86,7 +87,7 @@
                 </div>
                 <div class="row">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Submit</button>
+                        <button type="submit"  class="btn btn-primary form-control">Submit</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Home" asp-action="Minithon" class="btn btn-outline-secondary border form-control">
@@ -97,4 +98,5 @@
             </div>
         </form>
     </div>
+</div>
 </div>
