trying to added notification alert

--- a/CODEx/Areas/Admin/Views/Coordinator/Upsert.cshtml
+++ b/CODEx/Areas/Admin/Views/Coordinator/Upsert.cshtml
@@ -36,9 +36,24 @@
                             <span asp-validation-for="Coordinator.Batch" class="text-danger"></span>
                         </div>
                         <div class="mb-3 row">
+                            <label asp-for="Coordinator.Github" class="p-1"></label>
+                            <input asp-for="Coordinator.Github" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Coordinator.Github" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row">
                             <label asp-for="Coordinator.LinkedIn" class="p-1"></label>
                             <input asp-for="Coordinator.LinkedIn" class="form-control border-0 shadow" />
                             <span asp-validation-for="Coordinator.LinkedIn" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row">
+                            <label asp-for="Coordinator.Instagram" class="p-1"></label>
+                            <input asp-for="Coordinator.Instagram" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Coordinator.Instagram" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row">
+                            <label asp-for="Coordinator.Facebook" class="p-1"></label>
+                            <input asp-for="Coordinator.Facebook" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Coordinator.Facebook" class="text-danger"></span>
                         </div>
                         <div class="mb-3 row">
                             <label asp-for="Coordinator.ImageUrl" class="p-1 text-muted"></label>
