--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>CODEx</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CODEx.styles.css" asp-append-version="true" />
     <!-- bootstrap core css -->
@@ -44,13 +45,21 @@
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Minithon">Minithon 2024</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " asp-area="User" asp-controller="QRCode" asp-action="Index">QR Code</a>
+                            <a class="nav-link" asp-area="User" asp-controller="Home" asp-action="UpcomingEvent">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="price.html">Pricing</a>
+                            <a class="nav-link" asp-area="User" asp-controller="Home" asp-action="AboutUs">About Us</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">About Us</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Tools
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="User" asp-controller="QRCode" asp-action="Index">QR Generator</a>
+                                <a class="dropdown-item" >Link Shortner</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item">Learning Materials</a>
+                            </div>
                         </li>
                         @if (User.IsInRole(SD.Role_Admin))
                         {
@@ -94,6 +103,10 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/jquery-3.4.1.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.tiny.cloud/1/pigi8quqxfj0qj83wyjgjays698rmdplykg81wr96rulq211/tinymce/6/tinymce.min.js" referrerpolicy="origin">
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script></script>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
