All the Error Has been Resolved

--- a/CODEx/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CODEx/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LoginModel
 
-
+<div class="container">
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-4">
         <div class="row">
@@ -37,15 +37,15 @@
                             <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                         </div>
                         <div class="d-flex justify-content-between pt-2">
-                            <p>
+                            @* <p>
                                 <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                            </p>
+                            </p> *@
                             <p>
                                 <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                             </p>
-                            <p>
+                            @* <p>
                                 <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                            </p>
+                            </p> *@
                         </div>
                     </form>
                 </section>
@@ -85,7 +85,7 @@
         </div>
     </div>
 </div>
-
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
