--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -49,90 +49,14 @@
                     </div>
                 </div>
             </div>
-@*             <div class="carousel-item">
-                <div class="container ">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="detail-box">
-                                <h1>
-                                    Fast & Secure <br>
-                                    Web Hosting
-                                </h1>
-                                <p>
-                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsuanything embarrassing hidden in the middle of text. All the Lorem Ipsumm
-                                </p>
-                                <div class="btn-box">
-                                    <a href="" class="btn-1">
-                                        Read More
-                                    </a>
-                                    <a href="" class="btn-2">
-                                        Contact Us
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class=" col-lg-10 mx-auto">
-                                    <div class="img-box">
-                                        <img src="~/image/slider-img.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="container ">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="detail-box">
-                                <h1>
-                                    Fast & Secure <br>
-                                    Web Hosting
-                                </h1>
-                                <p>
-                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsuanything embarrassing hidden in the middle of text. All the Lorem Ipsumm
-                                </p>
-                                <div class="btn-box">
-                                    <a href="" class="btn-1">
-                                        Read More
-                                    </a>
-                                    <a href="" class="btn-2">
-                                        Contact Us
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class=" col-lg-10 mx-auto">
-                                    <div class="img-box">
-                                        <img src="~/image/slider-img.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> *@
-        <div class="carousel_btn-box">
-            <a class="carousel-control-prev" href="#customCarousel1" role="button" data-slide="prev">
-                    <i class="bi bi-chevron-left" aria-hidden="true"></i>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#customCarousel1" role="button" data-slide="next">
-                    <i class="bi bi-chevron-right" aria-hidden="true"></i>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
     </div>
 </section>
 <!-- end slider section -->
 </div>
 
+<br />
+<br />
+<br />
 <br />
 <!-- about section -->
 
@@ -156,7 +80,7 @@
             </div>
             <div class="col-md-6 ">
                 <div class="img-box">
-                    <img src="~/images/banner/codex.jpeg" alt="">
+                    <img src="~/images/codex.png" alt="">
                 </div>
             </div>
 
