--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <header class="header_section" style="background-color: #020230;">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" asp-action="Index">
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
                     <span>CODEx</span>
                 </a>
 
