--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <header class="header_section" style="background-color: #020230;">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-area="User" asp-controller="Home" asp-action="Index">
                     <span>CODEx</span>
                 </a>
 
@@ -39,10 +39,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav  ml-auto">
                         <li class="nav-item active">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" asp-area="User" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Minithon">Minithon 2024</a>
+                                <a class="nav-link" asp-area="User" asp-controller="Home" asp-action="Minithon">Minithon 2024</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="User" asp-controller="Home" asp-action="Community">Community</a>
