Login Page  Bug Fix

--- a/CODEx/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/CODEx/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
-    if (ViewData.TryGetValue("ParentLayout", out var parentLayout) && parentLayout !=  null)
+    if (ViewData.TryGetValue("ParentLayout", out var parentLayout) && parentLayout != null)
     {
         Layout = parentLayout.ToString();
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
-<h1>Manage your account</h1>
-
-<div>
+<div class="container">
+    <h1>Manage your account</h1>
     <h2>Change your account settings</h2>
     <hr />
     <div class="row">
