--- a/CODEx/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/CODEx/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -16,7 +16,11 @@
                 <label asp-for="Username" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
+                <input asp-for="Name" class="form-control" placeholder="Please choose your username." disabled />
+                <label asp-for="Name" class="form-label"></label>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
