--- a/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
+++ b/CODEx/Areas/User/Views/RegistrationForm/Index.cshtml
@@ -12,7 +12,7 @@
             </div>
             <div class="col-6 text-end">
                 <a asp-controller="RegistrationForm" asp-action="ExportToExcel" class="btn btn-primary">
-                    <i class="bi bi-plus-circle"></i> Import To Excel Sheet
+                    <i class="fa fa-download"></i> Import To Excel Sheet
                 </a>
             </div>
         </div>
