--- a/CODEx/Areas/Admin/Views/Coordinator/Index.cshtml
+++ b/CODEx/Areas/Admin/Views/Coordinator/Index.cshtml
@@ -2,10 +2,11 @@
 
 @model List<Coordinator>
 
+<div class="container">
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row text-center">
-            <h2 class="text-primary py-2">Coordinator List</h2>
+            <h2 class="text-dark py-2">Coordinator List</h2>
         </div>
     </div>
     <div class="card-body p-4">
@@ -62,4 +63,5 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
