Faculty Coloum Added

--- a/CODEx/Views/Shared/_Layout.cshtml
+++ b/CODEx/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Admin" asp-action="Index">Add Events</a>
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Coordinator" asp-action="Index">Add Coordinator</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Faculty" asp-action="Index">Add Faculty</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-area="User" asp-controller="RegistrationForm" asp-action="Index">View Registration</a>
                                 </div>
