--- a/CODEx/Areas/User/Views/Home/Index.cshtml
+++ b/CODEx/Areas/User/Views/Home/Index.cshtml
@@ -7,9 +7,6 @@
     var events = Model.Events.Take(limit);
 }
 
-<style>
-
-</style>
 <div class="hero_area">
 <!-- slider section -->
 <section class="slider_section ">
@@ -89,6 +86,41 @@
 </section>
 
 <!-- end about section -->
+<div class="container">
+    <div class="faculty">
+<!--Faculty Coordinator-->
+        <section class="service_section layout_padding">
+            <div class="container">
+                <div class="heading_container heading_center">
+                    <h2>
+                        Our Faculty Coordinator
+                    </h2>
+                </div>
+            </div>
+            <div class="">
+                <div class="row">
+                    @foreach (var facultylist in Model.Faculty)
+                    {
+                        <div class="col-md-6 col-lg-4">
+                            <div class="box ">
+
+                                <div class="img-box">
+                                    <img src="@facultylist.ImageUrl" />
+                                </div>
+                                <div class="detail-box">
+                                    <h4>
+                                        @facultylist.Name
+                                    </h4>
+                                    <p>
+                                        @facultylist.Desigation
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+        </section>
+</div>
 
 <!-- Coordinator section -->
 
@@ -174,6 +206,8 @@
 
 <br />
 
-
+<div class="col-12 text-center">
+    <a asp-area="User" asp-action="ListFaculty" asp-controller="Home" class="btn btn-primary btn-gradient">View All Events</a>
+</div>
 
 
